--- a/templates/signup.html
+++ b/templates/signup.html
@@ -18,33 +18,34 @@
                                 <div class="login-form signup-form">
                                     <h4 class="login-title text-center">Регистрация</h4>
                                     <div class="row">
-                                        <form id="contactForm" method="POST" action="contact.php" class="log-form">
+                                        <form class="contactForm" method="POST" >
+                                            {% csrf_token %}
                                             <div class="col-md-12 col-sm-12 col-xs-12">
-                                                <input type="text" id="name" class="form-control" placeholder="Введите ваше имя" required data-error="Please enter your name">
+                                                <input type="text"  class="form-control" placeholder="Введите ваше имя" name="username" >
                                             </div>
                                             <div class="col-md-12 col-sm-12 col-xs-12">
-                                                <input type="email" id="email" class="form-control" placeholder="Введите вашу почту" required data-error="Please enter your name">
+                                                <input type="email"  class="form-control" placeholder="Введите вашу почту" name="email" >
                                             </div>
                                             <div class="col-md-12 col-sm-12 col-xs-12">
-                                                <input type="password" id="msg_subject" class="form-control" placeholder="Пароль" required data-error="Please enter your message subject">
+                                                <input type="password"  class="form-control" placeholder="Пароль" name="password">
                                             </div>
                                             <div class="col-md-12 col-sm-12 col-xs-12">
-                                                <input type="password" id="cmsg_subject" class="form-control" placeholder="Потвердить пароль" required data-error="Please enter your message subject">
+                                                <input type="password"  class="form-control" placeholder="Потвердить пароль" name="confirm_password">
                                             </div>
-                                            <div class="col-md-12 col-sm-12 col-xs-12 text-center">
+                                            {% comment %} <div class="col-md-12 col-sm-12 col-xs-12 text-center">
                                                 <div class="check-group flexbox">
                                                     <label class="check-box">
                                                         <input type="checkbox" class="check-box-input" checked>
                                                         <span class="remember-text">Я согласен с условиями</span>
                                                     </label>
                                                 </div>
-                                            </div>
+                                            </div> {% endcomment %}
                                             <div class="col-md-12 col-sm-12 col-xs-12 text-center">
-                                                <button type="submit" id="submit" class="slide-btn login-btn">Зарегистрироваться</button>
-                                                <div id="msgSubmit" class="h3 text-center hidden"></div> 
-                                                <div class="clearfix"></div>
+                                                <button type="submit"  class="slide-btn login-btn">Зарегистрироваться</button>
+                                                {% comment %} <div id="msgSubmit" class="h3 text-center hidden"></div> 
+                                                <div class="clearfix"></div> {% endcomment %}
                                             </div>
-                                            <div class="col-md-12 col-sm-12 col-xs-12 text-center">
+                                            {% comment %} <div class="col-md-12 col-sm-12 col-xs-12 text-center">
                                                 <div class="clear"></div>
                                                 <div class="separetor text-center"><span>Или с регистрацией
                                                 </span></div>
@@ -54,10 +55,11 @@
                                                         <li><a class="twitter" href="#">twitter</a></li>
                                                         <li><a class="google" href="#">google+</a></li>
                                                     </ul>
-                                                    <div class="acc-not">Уже есть аккаунт  <a href="{%url 'login'%}">Войти</a></div>
+                                                    
                                                 </div>
-                                            </div>
+                                            </div> {% endcomment %}
                                         </form> 
+                                        <div class="acc-not">Уже есть аккаунт  <a href="{%url 'login'%}">Войти</a></div>
                                     </div>
                                 </div>
                             </div>
