--- a/templates/header.html
+++ b/templates/header.html
@@ -28,7 +28,7 @@
                             
                             {% else %}
 
-                            <li><a href="{% url 'register'%}"><img src="{%static 'img/icon/login.png'%}" alt="">Войти</a>
+                            <li><a href="{% url 'login'%}"><img src="{%static 'img/icon/login.png'%}" alt="">Войти</a>
                             {%endif%}
 
                         </ul>
