--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,10 +7,10 @@
                     <div class="footer-content logo-footer">
                         <div class="footer-head">
                             <div class="footer-logo">
-                                <a class="footer-black-logo" href="#"><img src="{%static 'img/logo/logo2.png'%}" alt=""></a>
+                                <a class="footer-black-logo" href="{% url 'index'%}"><img src="{{setting.logo.url}}" width = "100px"alt=""></a>
                             </div>
                             <p>
-                                Replacing a  maintains the amount of lines. When replacing a selection. help agencies to define their new business objectives and then create. Replacing a  maintains the amount of lines. 
+                                {{setting.desc}}
                             </p>
                             <div class="subs-feilds">
                                 <div class="suscribe-input">
@@ -96,7 +96,7 @@
                     <div class="copyright">
                         <p>
                             Copyright © 2020
-                            <a href="#">playdo</a> All Rights Reserved
+                            <a href="#">Nurblot</a> All Rights Reserved
                         </p>
                     </div>
                 </div>
