--- a/templates/login_eror.html
+++ b/templates/login_eror.html
@@ -38,7 +38,7 @@
 								        <h2 class="error-easy-text">Ошибка входа</h2>
 								    	<h1 class="high-text">5<span class="color">0</span>3</h1>
 								    	<h4 class="error-bot">Извините неправильный логин или пароль, попробуйте заного.</h4>
-								    	<a  class="error-btn" href="{% url 'register'%}">Повторить вход. </a>
+								    	<a  class="error-btn" href="{% url 'login'%}">Повторить вход. </a>
 								    </div>
 								</div>
 					        </div>
