--- a/templates/header.html
+++ b/templates/header.html
@@ -7,8 +7,8 @@
                 <div class=" col-md-8 col-sm-8 col-xs-12">
                     <div class="topbar-left">
                         <ul>
-                            <li><a href="#"><i class="fa fa-envelope"></i> info@playdo4.com</a></li>
-                            <li><a href="#"><i class="fa fa-clock-o"></i> Live support</a></li>
+                            <li><a href="#"><i class="fa fa-envelope"></i> {{contact.email}}</a></li>
+                            <li><a href="{{contact.telegram}}"><i class="fa fa-clock-o"></i> Живая поддержка</a></li>
                         </ul>  
                     </div>
                 </div>
@@ -87,14 +87,9 @@
                                             <li><a href="terms.html">terms & Conditions</a></li> {% endcomment %}
                                         </ul>
                                     </li>
-                                    <li><a class="pagess" href="#">Blog</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="blog.html">Blog grid</a></li>
-                                            <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-                                            <li><a href="blog-details.html">Blog Details</a></li>
-                                        </ul>
+                                    <li><a class="pagess" href="#">Новости</a>
                                     </li>
-                                    <li><a href="contact.html">contacts</a></li>
+                                    <li><a href="{% url 'contact'%}">Контакты</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -134,14 +129,9 @@
                                         <li><a href="terms.html">terms & Conditions</a></li> {% endcomment %}
                                     </ul>
                                 </li>
-                                {% comment %} <li><a class="pagess" href="#">Blog</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog.html">Blog grid</a></li>
-                                        <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-                                        <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul>
-                                </li> {% endcomment %}
-                                <li><a href="contact.html">Контакты</a></li>
+                                 <li><a class="pagess" href="#">Новости</a>
+                                </li> 
+                                <li><a href="{% url 'contact'%}">Контакты</a></li>
                             </ul>
                         </nav>
                     </div>					
