--- a/templates/header.html
+++ b/templates/header.html
@@ -87,7 +87,7 @@
                                             <li><a href="terms.html">terms & Conditions</a></li> {% endcomment %}
                                         </ul>
                                     </li>
-                                    <li><a class="pagess" href="#">Новости</a>
+                                    <li><a class="pagess" href="{% url 'news'%}">Новости</a>
                                     </li>
                                     <li><a href="{% url 'contact'%}">Контакты</a></li>
                                 </ul>
@@ -129,7 +129,7 @@
                                         <li><a href="terms.html">terms & Conditions</a></li> {% endcomment %}
                                     </ul>
                                 </li>
-                                 <li><a class="pagess" href="#">Новости</a>
+                                 <li><a class="pagess" href="{% url 'news'%}">Новости</a>
                                 </li> 
                                 <li><a href="{% url 'contact'%}">Контакты</a></li>
                             </ul>
