--- a/templates/contact.html
+++ b/templates/contact.html
@@ -112,7 +112,7 @@
                                             <div class="help-block with-errors"></div>
                                         </div>
                                         <div class="col-md-12 col-sm-12 col-xs-12">
-                                            <textarea name="message" rows="6" placeholder="Сообщение" class="form-control" required data-error="Write your message"></textarea>
+                                            <textarea name="message" id="message-box" rows="6" placeholder="Сообщение" class="form-control" required data-error="Write your message"></textarea>
                                             <div class="help-block with-errors"></div>
                                         </div>
                                         <div class="col-md-12 col-sm-12 col-xs-12">
