--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -17,11 +17,12 @@
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="breadcrumb">
                             <div class="section-headline">
-                                <h2>Blog Details</h2>
+                                <h2>НАША КОМАНДА</h2>
                             </div>
                             <ul>
-                                <li class="home-bread">Home</li>
-                                <li>Blog Details</li>
+                                <a href = "{%url 'index'%}">
+                                <li class="home-bread" >Главная страница</li></a>
+                                <li>НАША КОМАНДА</li>
                             </ul>
                         </div>
                     </div>
