--- a/templates/index.html
+++ b/templates/index.html
@@ -312,178 +312,33 @@
                 <div class="row">
                     <div class="blog-grid home-blog">
                         <!-- Start single blog -->
+                        
+                        {%for new in new%}
                         <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="single-blog">
                                <div class="blog-image">
-									<a class="image-scale" href="#">
-										<img src="{%static 'img/blog/b1.jpg'%}" alt="">
+									<a class="image-scale" href="{% url 'news_detail' new.id%}">
+										<img src="{{new.image_news.url}}" alt="">
 									</a>
 								</div>
                                 <div class="blog-content">
                                    <div class="blog-meta">
-                                        <span class="admin-type">
-                                            <i class="fa fa-user"></i>
-                                            Admin
-                                        </span>
+                                        
                                         <span class="date-type">
                                             <i class="fa fa-calendar"></i>
-                                            20 july, 2019
+                                            {{new.created_news}}
                                         </span>
-                                        <span class="comments-type">
-                                            <i class="fa fa-comment-o"></i>
-                                            13
-                                        </span>
+                                        
                                     </div>
-                                    <a href="#">
-                                        <h4>Creative games design clients response is better</h4>
+                                    <a href="{% url 'news_detail' new.id%}">
+                                        <h4>{{new.name_news}}</h4>
                                     </a>
                                 </div>
                             </div>
                         </div>
+                        {%endfor%}
                         <!-- End single blog -->
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="single-blog">
-                                <div class="blog-content">
-                                   <div class="blog-meta">
-                                       <span class="admin-type">
-                                            <i class="fa fa-user"></i>
-                                            Admin
-                                        </span>
-                                        <span class="date-type">
-                                           <i class="fa fa-calendar"></i>
-                                            13 may, 2018
-                                        </span>
-                                        <span class="comments-type">
-                                            <i class="fa fa-comment-o"></i>
-                                            16
-                                        </span>
-                                    </div>
-                                    <a href="#">
-                                        <h4>Games development is a best work in future world</h4>
-                                    </a>
-                                </div>
-                                <div class="blog-image">
-									<a class="image-scale" href="#">
-										<img src="{%static 'img/blog/b2.jpg'%}" alt="">
-									</a>
-								</div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="single-blog">
-                                <div class="blog-image">
-									<a class="image-scale" href="#">
-										<img src="{%static 'img/blog/b3.jpg'%}" alt="">
-									</a>
-								</div>
-                                <div class="blog-content">
-                                   <div class="blog-meta">
-                                        <span class="admin-type">
-                                            <i class="fa fa-user"></i>
-                                            Admin
-                                        </span>
-                                        <span class="date-type">
-                                           <i class="fa fa-calendar"></i>
-                                            24 april, 2019
-                                        </span>
-                                        <span class="comments-type">
-                                            <i class="fa fa-comment-o"></i>
-                                            07
-                                        </span>
-                                    </div>
-                                    <a href="#">
-                                        <h4>You can trust me and playing with best win</h4>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End single blog -->
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="single-blog">
-                                <div class="blog-content">
-                                    <div class="blog-meta">
-                                        <span class="admin-type">
-                                            <i class="fa fa-user"></i>
-                                            Admin
-                                        </span>
-                                        <span class="date-type">
-                                           <i class="fa fa-calendar"></i>
-                                            28 june, 2019
-                                        </span>
-                                        <span class="comments-type">
-                                            <i class="fa fa-comment-o"></i>
-                                            32
-                                        </span>
-                                    </div>
-                                    <a href="#">
-                                        <h4>Games playerwant to be benifit pateform games.</h4>
-                                    </a>
-                                </div>
-                                <div class="blog-image">
-									<a class="image-scale" href="#">
-										<img src="{%static 'img/blog/b4.jpg'%}" alt="">
-									</a>
-								</div> 
-                            </div>
-                        </div>
-                        <!-- End single blog -->
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="single-blog">
-                                <div class="blog-image">
-									<a class="image-scale" href="#">
-										<img src="{%static 'img/blog/b5.jpg'%}" alt="">
-									</a>
-								</div>
-                                <div class="blog-content">
-                                    <div class="blog-meta">
-                                        <span class="admin-type">
-                                            <i class="fa fa-user"></i>
-                                            Admin
-                                        </span>
-                                        <span class="date-type">
-                                           <i class="fa fa-calendar"></i>
-                                            28 june, 2019
-                                        </span>
-                                        <span class="comments-type">
-                                            <i class="fa fa-comment-o"></i>
-                                            32
-                                        </span>
-                                    </div>
-                                    <a href="#">
-                                        <h4>Games player man want to be win any game</h4>
-                                    </a>
-                                </div> 
-                            </div>
-                        </div>
-                        <!-- End single blog -->
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="single-blog">
-                                <div class="blog-content">
-                                    <div class="blog-meta">
-                                        <span class="admin-type">
-                                            <i class="fa fa-user"></i>
-                                            Admin
-                                        </span>
-                                        <span class="date-type">
-                                           <i class="fa fa-calendar"></i>
-                                            28 june, 2019
-                                        </span>
-                                        <span class="comments-type">
-                                            <i class="fa fa-comment-o"></i>
-                                            32
-                                        </span>
-                                    </div>
-                                    <a href="#">
-                                        <h4>Games developer must complete thier</h4>
-                                    </a>
-                                </div>
-                                <div class="blog-image">
-									<a class="image-scale" href="#">
-										<img src="{%static 'img/blog/b6.jpg'%}" alt="">
-									</a>
-								</div>
-                            </div>
-                        </div>
+                        
                         <!-- End single blog -->
                     </div>
                 </div>
