--- a/templates/index.html
+++ b/templates/index.html
@@ -272,7 +272,7 @@
         
         <!-- End Affiliate Area -->
         <!-- Start Overview Area -->
-        <div class="overview-area bg-color-2 fix area-padding">
+        {% comment %} <div class="overview-area bg-color-2 fix area-padding">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
@@ -296,7 +296,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> {% endcomment %}
         <!-- End Overview Area -->
         <!-- Start Blog Area-->
         <div class="blog-area fix bg-color area-padding-2">
@@ -304,8 +304,8 @@
                 <div class="row">
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="section-headline text-center">
-                            <h3>Games world news</h3>
-							<p>Dummy text is also used to demonstrate the appearance of different typefaces and layouts</p>
+                            <h3>Новости Игрового Мира</h3>
+							<p>Читай последние новости про твою любимую игру.</p>
 						</div>
 					</div>
 				</div>
