--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -91,8 +91,7 @@
 							<div class="single-post-comments">
 								
 								<div class="comment-respond">
-									<h3 class="comment-reply-title">Leave a Reply </h3>
-									<span class="email-notes">Your email address will not be published. Required fields are marked *</span>
+									<h3 class="comment-reply-title">Оставьте Ответ </h3>
 									
 									<div class="row">
 										<div class="comments-area">
